Make the crashed web platform pointerevent tests pass.

In the Issue 2130433002, Navid had to skip some pointerevent tests because they crashed for some reasons.
This patch fixes it and also remove them from the TestExpectations file.

BUG=620236

Review-Url: https://codereview.chromium.org/2127303002
Cr-Commit-Position: refs/heads/master@{#405558}

Former-commit-id: c6d61f2a2afb8560ea805450887d802cb90bf117